--- a/rule4be/templates/rule4be/create_aol.html
+++ b/rule4be/templates/rule4be/create_aol.html
@@ -22,7 +22,7 @@
             <!-- Include the necessary input fields -->
             <div class="form__label-field">
                 <label class="form__label" for="name">Name:</label>
-                <input class="form__input" type="text" name="name" id="name" required>
+                <input class="form__input" type="text" name="name" id="name" required autofocus>
             </div>
             <div class="form__label-field">
                 <label class="form__label" for="description">Description:</label>
