--- a/rule4be/templates/rule4be/aols.html
+++ b/rule4be/templates/rule4be/aols.html
@@ -41,13 +41,13 @@
 <div id="profileContainer" class="sm:mt-12 swap-transition"></div>
 <div
     id="aolContainer"
-    class="aol-container w-full grid grid-cols-4 gap-4 relative mt-12 h-screen sm:mt-0"
+    class="aol-container w-full overflow-x-auto flex justify-between gap-x-3 relative mt-12 h-screen sm:mt-0"
     x-data="{ openSnapshotForm: null }"
     @open-snapshot-form.window="openSnapshotForm = $event.detail.snapshotId">
     {% for area_of_life in aols %}
     <div
         id="aol-anchor-{{ area_of_life.id }}"
-        class="aol-item card bg-custom-pattern absolute left-0 top-0 right-0 bottom-0 flex flex-col z-0 h-[600px] overflow-y-auto sm:relative">
+        class="aol-item card bg-custom-pattern absolute left-0 top-0 right-0 bottom-0 flex flex-col z-0 h-[600px] sm:min-w-[340px] sm:relative">
         <div class="card__header">
             <div class="flex justify-between items-start">
                 <div class="aol-details">
@@ -58,7 +58,7 @@
                     <button @click="open = ! open">
                         <i class="fa-regular fa-ellipsis-vertical text-lg text-blue-500"></i>
                     </button>
-                    <div class="aol-tools__buttons flex flex-col justify-between gap-x-4 bg-white p-2 rounded-md shadow border border-gray-100 absolute -top-12 -right-4" x-show="open" x-transition>
+                    <div class="aol-tools__buttons flex flex-col justify-between gap-x-4 bg-white p-2 rounded-md shadow border border-gray-100 absolute top-8 right-0 z-50" x-show="open" x-transition>
                         <div class="flex justify-end items-center gap-x-4">
                             <button class="ms-auto" @click.stop hx-get="{% url 'edit_aol' area_of_life.id %}" hx-headers='{"Content-Type":"text/html"}' hx-accept="text/html" hx-trigger="click" hx-target="#aolCrudFormContainer-{{ area_of_life.id }}" hx-swap="innerHTML">
                                 <i class="icon icon--edit"></i>
@@ -76,7 +76,7 @@
             </button>
             <div id="create-form-{{ area_of_life.id }}" x-show="openSnapshotForm === {{ area_of_life.id }}" x-transition></div>
         </div>
-        <div class="card__body" @close-form.window="if ($event.detail.formId === 'snapshot-{{ area_of_life.id }}') openSnapshotForm = null">
+        <div class="card__body max-h-[500px] overflow-y-auto" @close-form.window="if ($event.detail.formId === 'snapshot-{{ area_of_life.id }}') openSnapshotForm = null">
             <div data-snapshot-today hx-get="{% url 'load_today_snapshot_page' area_of_life.id %}" hx-trigger="load" hx-target="#today-{{ area_of_life.id }}" hx-headers='{"Content-Type":"text/html"}' hx-accept="text/html"></div>
             <div id="today-{{ area_of_life.id }}"></div>
             <!-- Display snapshots for the current AOL -->
