--- a/rule4be/templates/rule4be/privacy_policy.html
+++ b/rule4be/templates/rule4be/privacy_policy.html
@@ -1,9 +1,10 @@
-{% extends 'rule4be/main.html' %}
+
 
 {% block content %}
-<h1>Privacy Policy</h1>
-<p>It is simple, we don't track your activity, we don't sell your data.</p>
-<p>For more information you can email your questions to info@rule4.app</p>
+<div id="crudModalContent" class="modal__content swap-transition overflow-y-auto">
+    <h1 class="text-3xl font-medium mb-5 text-center">Privacy Policy</h1>
+    <p>It is simple, we don't track your activity, we don't sell your data.</p>
+    <p>For more information you can email your questions to <a class="text-blue-600 font-medium" href="mailto:info@rule4.app">info@rule4.app</a>.</p>
+</div>
 
 {% endblock %}
-```
