--- a/rule4be/templates/rule4be/terms_and_conditions.html
+++ b/rule4be/templates/rule4be/terms_and_conditions.html
@@ -1,27 +1,35 @@
-{% extends 'rule4be/main.html' %}
+
 
 {% block content %}
-<h1>Terms and Conditions</h1>
-<h2>General Terms:</h2>
-<p>We don't run adds.</p>
-<p>We don't use cookies to track what you are doing.</p>
-<p>We don't sell your data.</p>
-<p>Rule4 is a Journaling APp for you to use privately.</p>
+<div id="crudModalContent" class="modal__content swap-transition overflow-y-auto">
 
-<h2>Free Trial Period:</h2>
-<p>You can access a 30-day free trial to see if you like using Rule4</p>
-<p>After the 30-day trial, you will need to subscribe to continue using Rule4</p>
-
-
-<h2>Cancellation:</h2>
-<p>You can cancel your subscription at any time</p>
-<p>Once you cancel your subscription, you will no longer have access to Rule4</p>
-<p>Your data will be saved for 30 days after you cancel your subscription, giving you time to re-activate your account
-    should you which to.</p>
-<p>We do not provide a data export service when you cancel your account.</p>
-
-<h2>Contact Us:</h2>
-<p>If you have any questions about our terms and conditions, please contact us at info@rule4.app</p>
+                <h1 class="text-3xl font-medium my-5 text-center">Terms and Conditions</h1>
+                <h2 class="text-xl font-medium">General Terms:</h2>
+                <ul>
+                    <li>We don't run adds.</li>
+                    <li>We don't use cookies to track what you are doing.</li>
+                    <li>We don't sell your data.</li>
+                    <li>Rule4 is a journaling app for you to use privately.</li>
+                </ul>
+                
+                <h2 class="text-xl font-medium mt-5">Free Trial Period:</h2>
+                <ul>
+                    <li>You can access a 30-day free trial to see if you like using Rule4</li>
+                    <li>After the 30-day trial, you will need to subscribe to continue using Rule4</li>
+                </ul>
+                
+                
+                <h2 class="text-xl font-medium mt-5">Cancellation:</h2>
+                <ul>
+                    <li>You can cancel your subscription at any time</li>
+                    <li>Once you cancel your subscription, you will no longer have access to Rule4</li>
+                    <li>Your data will be saved for 30 days after you cancel your subscription, giving you time to re-activate your account
+                        should you which to.</li>
+                    <li>We do not provide a data export service when you cancel your account.</li>
+                </ul>
+                
+                <h2 class="text-xl font-medium mt-5">Contact Us:</h2>
+                <p>If you have any questions about our terms and conditions, please contact us at <a class="text-blue-600 font-medium" href="mailto:info@rule4.app">info@rule4.app</a>.</p>
+</div>
 
 {% endblock %}
-```
