--- a/static/css/tailwind/tailwind-output.css
+++ b/static/css/tailwind/tailwind-output.css
@@ -675,6 +675,30 @@ body.main-app > main {
 
 /* Icon Buttons */
 
+.icon-btn {
+  border-radius: 0.375rem;
+  border-width: 1px;
+  border-color: transparent;
+  padding: 0.5rem;
+  text-align: center;
+  line-height: 1;
+}
+
+.icon-btn:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.icon-btn:hover i {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
 /* Lists */
 
 /* Icons */
@@ -746,6 +770,19 @@ body.main-app > main {
   content: "\f060";
 }
 
+.icon--prev {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+  font-family: "Font Awesome 6 Pro";
+  font-style: normal;
+  font-weight: 300;
+  text-transform: none;
+}
+
+.icon--prev::before {
+  content: "\f137";
+}
+
 .icon--user {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
@@ -806,7 +843,96 @@ body.main-app > main {
 
 /* Modals */
 
+.modal__dialog {
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding: 1.25rem;
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+@media (min-width: 640px) {
+  .modal__dialog {
+    min-width: 400px;
+  }
+}
+
+.modal__body {
+  display: flex;
+  min-height: 200px;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal__content {
+  width: 100%;
+}
+
+.modal__dialog .modal__close {
+  position: absolute;
+  top: 1.25rem;
+  right: 1.25rem;
+  z-index: 10;
+  margin: 0px;
+  display: flex;
+  height: 24px;
+  width: 24px;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  border-radius: 9999px;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding: 0px;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 500;
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.modal__dialog .modal__close:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.modal__dialog .modal__close::before {
+  line-height: 0;
+}
+
 /* Modal form success message */
+
+.modal__body .form-success-message {
+  display: flex;
+  height: 100%;
+  min-height: 200px;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.5rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(240 253 244 / var(--tw-bg-opacity));
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
+}
 
 /* Form required fields */
 
@@ -1625,16 +1751,12 @@ a:hover,
   position: sticky;
 }
 
+.inset-0 {
+  inset: 0px;
+}
+
 .-right-2 {
   right: -0.5rem;
-}
-
-.-right-4 {
-  right: -1rem;
-}
-
-.-top-12 {
-  top: -3rem;
 }
 
 .bottom-0 {
@@ -1663,38 +1785,6 @@ a:hover,
 
 .top-6 {
   top: 1.5rem;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.right-2 {
-  right: 0.5rem;
-}
-
-.right-6 {
-  right: 1.5rem;
-}
-
-.-top-4 {
-  top: -1rem;
-}
-
-.-top-3 {
-  top: -0.75rem;
-}
-
-.-top-2 {
-  top: -0.5rem;
-}
-
-.top-4 {
-  top: 1rem;
 }
 
 .top-8 {
@@ -1732,6 +1822,10 @@ a:hover,
   margin-bottom: 0.75rem;
 }
 
+.me-2 {
+  margin-inline-end: 0.5rem;
+}
+
 .ms-5 {
   margin-inline-start: 1.25rem;
 }
@@ -1754,6 +1848,10 @@ a:hover,
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .block {
@@ -1788,6 +1886,10 @@ a:hover,
   aspect-ratio: 1 / 1;
 }
 
+.h-8 {
+  height: 2rem;
+}
+
 .h-\[28px\] {
   height: 28px;
 }
@@ -1800,6 +1902,10 @@ a:hover,
   height: 100dvh;
 }
 
+.h-full {
+  height: 100%;
+}
+
 .h-screen {
   height: 100vh;
 }
@@ -1808,20 +1914,32 @@ a:hover,
   max-height: 500px;
 }
 
+.max-h-\[700px\] {
+  max-height: 700px;
+}
+
+.max-h-\[750px\] {
+  max-height: 750px;
+}
+
 .min-h-72 {
   min-height: 18rem;
+}
+
+.min-h-\[200px\] {
+  min-height: 200px;
 }
 
 .min-h-screen {
   min-height: 100vh;
 }
 
-.w-\[28px\] {
-  width: 28px;
+.w-8 {
+  width: 2rem;
 }
 
-.w-auto {
-  width: auto;
+.w-\[28px\] {
+  width: 28px;
 }
 
 .w-fit {
@@ -1833,24 +1951,12 @@ a:hover,
   width: 100%;
 }
 
-.w-\[300px\] {
-  width: 300px;
-}
-
 .min-w-72 {
   min-width: 18rem;
 }
 
 .min-w-\[60px\] {
   min-width: 60px;
-}
-
-.min-w-\[300px\] {
-  min-width: 300px;
-}
-
-.min-w-\[340px\] {
-  min-width: 340px;
 }
 
 .max-w-96 {
@@ -1873,8 +1979,30 @@ a:hover,
   border-collapse: collapse;
 }
 
+.scale-0 {
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-100 {
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
 }
 
 .cursor-pointer {
@@ -1930,6 +2058,11 @@ a:hover,
        column-gap: 0.5rem;
 }
 
+.gap-x-3 {
+  -moz-column-gap: 0.75rem;
+       column-gap: 0.75rem;
+}
+
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -1937,11 +2070,6 @@ a:hover,
 
 .gap-y-4 {
   row-gap: 1rem;
-}
-
-.gap-x-3 {
-  -moz-column-gap: 0.75rem;
-       column-gap: 0.75rem;
 }
 
 .overflow-x-auto {
@@ -1991,6 +2119,11 @@ a:hover,
   border-bottom-color: rgb(59 130 246 / var(--tw-border-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-green-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(240 253 244 / var(--tw-bg-opacity));
@@ -2006,6 +2139,14 @@ a:hover,
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
+}
+
+.fill-green-100 {
+  fill: #dcfce7;
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -2016,6 +2157,10 @@ a:hover,
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .px-6 {
@@ -2085,6 +2230,16 @@ a:hover,
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -2203,14 +2358,6 @@ a:hover,
     position: relative;
   }
 
-  .sm\:right-2 {
-    right: 0.5rem;
-  }
-
-  .sm\:right-3 {
-    right: 0.75rem;
-  }
-
   .sm\:mt-0 {
     margin-top: 0px;
   }
@@ -2233,10 +2380,6 @@ a:hover,
 }
 
 @media (min-width: 768px) {
-  .md\:-right-4 {
-    right: -1rem;
-  }
-
   .md\:mt-12 {
     margin-top: 3rem;
   }
@@ -2261,8 +2404,9 @@ a:hover,
   }
 }
 
-@media (min-width: 1280px) {
-  .xl\:right-3 {
-    right: 0.75rem;
+@media (prefers-color-scheme: dark) {
+  .dark\:text-gray-600 {
+    --tw-text-opacity: 1;
+    color: rgb(75 85 99 / var(--tw-text-opacity));
   }
 }
