Add temp intro video and hide testimonails

--- a/rule4be/templates/rule4be/login.html
+++ b/rule4be/templates/rule4be/login.html
@@ -26,8 +26,8 @@
         </div>
     </section>
     <section class="bg-custom-pattern pb-10">
-        <video class="mx-auto" width="640" height="480" controls>
-            <source src="{% static 'videos/my_video.mp4' %}" type="video/mp4">
+        <video class="mx-auto" width="640" height="480" controls autoplay muted>
+            <source src="{% static 'videos/rule4_rough_intro_hb.mp4' %}" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </section>
@@ -57,7 +57,7 @@
             </div>
         </div>
     </section>
-    <section class="testimonials py-5">
+    <!-- <section class="testimonials py-5">
         <div class="section__content">
             <h2 class="form__title mx-auto">Testimonials</h2>
             <div class="grid md:grid-cols-2 gap-4 mt-12">
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <section class="login-signup bg-custom-pattern">
         <div id="loginSignupSectionBtm" class="section__content"></div>
     </section>
